--- a/frontend-react/src/assets/cmps/_BoardList.scss
+++ b/frontend-react/src/assets/cmps/_BoardList.scss
@@ -122,11 +122,24 @@
           gap: 5px 3px;
 
           .label {
-            padding: 4px 8px;
-            font-size: 0.8rem;
-            color: #ffffff;
+            display: inline-block;
+            position: relative;
+            box-sizing: border-box;
+            min-width: 56px;
+            max-width: 100%;
+            height: 16px;
+            margin-bottom: 0;
+            padding: 0 8px;
+            overflow: hidden;
             border-radius: 4px;
+            font-size: 12px;
+            font-weight: 500;
+            line-height: 16px;
             text-align: center;
+            text-overflow: ellipsis;
+            vertical-align: middle;
+            white-space: nowrap;
+            color: #ffffff;
           }
         }
 
