--- a/frontend-react/src/assets/cmps/_CardDetailData.scss
+++ b/frontend-react/src/assets/cmps/_CardDetailData.scss
@@ -54,7 +54,7 @@
         gap: 6px;
 
         .isOn {
-          height: 20px;
+          height: 22px;
           border-radius: 3px;
           background-color: #6c7a91;
 
@@ -65,7 +65,10 @@
       }
 
       .icon {
+        align-self: stretch;
+
         svg {
+          align-self: start;
           width: 16px;
         }
       }
