--- a/frontend-react/src/assets/cmps/_CardModal.scss
+++ b/frontend-react/src/assets/cmps/_CardModal.scss
@@ -25,6 +25,7 @@
     background-color: #f0f0f0;
     border-radius: 8px;
     z-index: 20;
+    cursor: auto;
 
     .card-header {
       grid-column: 1/-1;
@@ -32,7 +33,7 @@
       flex-direction: column;
       min-height: 32px;
       gap: 10px;
-      padding: 8px 52px 8px 16px;
+      padding: 8px 10px 8px 16px;
       position: relative;
       z-index: 1;
 
