--- a/frontend-react/src/assets/cmps/_PopOverCheckList.scss
+++ b/frontend-react/src/assets/cmps/_PopOverCheckList.scss
@@ -5,7 +5,7 @@
     line-height: 20px;
     text-align: center;
     letter-spacing: normal;
-    margin: 14px;
+    margin: 14px 0px;
 
     background-color: #0c66e4;
     color: #ffff;
@@ -111,12 +111,20 @@
 
     .checklist-item-adder {
         display: flex;
+        flex-direction: column;
         grid-column: 2/-1;
-        margin-top: 10px;
 
         input {
             flex-grow: 1;
+            height: 56px;
             margin-right: 5px;
+            padding: 10px;
+            border: none;
+            box-shadow: inset 0 0 0 2px #388bff;
+
+            &:focus-visible {
+                outline: none;
+            }
         }
 
         button {
