--- a/frontend-react/src/assets/cmps/_PopOverCheckList.scss
+++ b/frontend-react/src/assets/cmps/_PopOverCheckList.scss
@@ -118,6 +118,9 @@
                 display: flex;
                 align-items: center;
                 margin-bottom: 5px;
+                font-size: 14px;
+                font-weight: 500;
+                color: #172b4d;
 
                 input[type="checkbox"] {
                     margin-right: 10px;
