--- a/frontend-react/src/assets/cmps/_PopOver.scss
+++ b/frontend-react/src/assets/cmps/_PopOver.scss
@@ -54,6 +54,8 @@
         opacity: 14%;
       }
     }
+
+
   }
 
   .pop-content-container {
@@ -78,6 +80,10 @@
         outline-color: #388bff;
       }
 
+    }
+
+    .add-checklist {
+      margin-left: 12px;
     }
 
     h4 {
