--- a/frontend-react/src/assets/main.scss
+++ b/frontend-react/src/assets/main.scss
@@ -27,6 +27,7 @@
 @import './cmps/_PopOverCheckList.scss';
 @import './cmps/PopOverLabels.scss';
 @import './cmps/GroupMenuDropDown.scss';
+@import './cmps/TaskModalPrev.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
