--- a/frontend-react/src/assets/cmps/_TaskModalPrev.scss
+++ b/frontend-react/src/assets/cmps/_TaskModalPrev.scss
@@ -13,7 +13,25 @@
             display: flex;
             line-height: 1;
             color: #44546f;
+            font-size: 13px;
+            padding: 3px;
             gap: 2px;
+
+            &.date {
+                background: #F5CD47;
+                width: fit-content;
+            }
+
+            &.checklist.finished {
+                color: white;
+                background-color: #1f845ae3;
+                padding: 5px;
+                border-radius: 3px;
+            }
         }
+
+
     }
+
+
 }
