--- a/frontend-react/src/assets/main.scss
+++ b/frontend-react/src/assets/main.scss
@@ -29,6 +29,7 @@
 @import './cmps/PopOverLabels.scss';
 @import './cmps/GroupMenuDropDown.scss';
 @import './cmps/TaskModalPrev.scss';
+@import './cmps/PopOverCover.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
