--- a/frontend-react/src/assets/cmps/_App-header.scss
+++ b/frontend-react/src/assets/cmps/_App-header.scss
@@ -281,3 +281,66 @@
   line-height: 20px;
   width: 18px;
 }
+
+.auth-button {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+    Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+  -webkit-box-align: stretch;
+  align-items: stretch;
+  display: flex;
+  height: 60px;
+  border: none;
+  max-width: 1320px;
+  border-radius: 4px;
+  font-size: 14px;
+  color: #ffffff;
+  transition: background-color 0.3s, box-shadow 0.3s;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.sign-up-button {
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  background-color: rgb(0, 101, 255);
+  color: rgb(255, 255, 255);
+
+  font-size: 1.2rem;
+  height: 100%;
+  padding: 0.5rem 1.5rem;
+  text-decoration: none;
+}
+
+.sign-up-button:hover {
+  background-color: rgb(0, 101, 255);
+  cursor: pointer;
+}
+
+.sign-up-button:focus {
+  outline: none;
+}
+
+.log-in-button {
+  background-color: #fff;
+  color: rgb(23, 43, 77);
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+  font-size: 1.2rem;
+  height: 100%;
+  padding: 0.5rem 1.5rem;
+  text-decoration: none;
+}
+
+.log-in-button:hover {
+  cursor: pointer;
+}
+
+.log-in-button:focus {
+  outline: none;
+}
+
+.auth-button:focus {
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
+}
