--- a/frontend-react/src/assets/cmps/_App-header.scss
+++ b/frontend-react/src/assets/cmps/_App-header.scss
@@ -1,19 +1,18 @@
 .app-header {
-  display: flex;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
     Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
   inset: 0;
-  justify-content: space-between;
   align-items: center;
   color: #172b4d;
   background-color: #ffffff;
   max-height: 48px;
   padding: 4px;
   font-size: 14px;
-
+  
   .left-section {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     .menu-icon {
       width: 20px;
@@ -281,8 +280,13 @@
   line-height: 20px;
   width: 18px;
 }
-
-.auth-button {
+.buttons-section {
+  display:flex;
+  justify-content: space-between;
+}
+.left-section.auth-buttons {
+  display: flex;
+  justify-content: space-between;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
     Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-box-align: stretch;
@@ -302,14 +306,13 @@
 .sign-up-button {
   align-items: center;
   align-self: stretch;
-  display: flex;
   background-color: rgb(0, 101, 255);
   color: rgb(255, 255, 255);
-
   font-size: 1.2rem;
   height: 100%;
   padding: 0.5rem 1.5rem;
   text-decoration: none;
+  border: none;
 }
 
 .sign-up-button:hover {
@@ -326,11 +329,11 @@
   color: rgb(23, 43, 77);
   align-items: center;
   align-self: stretch;
-  display: flex;
   font-size: 1.2rem;
   height: 100%;
   padding: 0.5rem 1.5rem;
   text-decoration: none;
+  border: none;
 }
 
 .log-in-button:hover {
