--- a/frontend-react/src/assets/cmps/_App-header.scss
+++ b/frontend-react/src/assets/cmps/_App-header.scss
@@ -5,7 +5,7 @@
   align-items: center;
   color: #172b4d;
   background-color: #ffffff;
-  max-height: 48px;
+  max-height: 100%;
   padding: 4px;
   font-size: 14px;
   
