--- a/frontend-react/src/assets/cmps/_PopOverCover.scss
+++ b/frontend-react/src/assets/cmps/_PopOverCover.scss
@@ -10,4 +10,28 @@
         transition: 0.4s;
         border: none;
     }
+
+}
+
+.task-cover-photos {
+    display: grid;
+    grid-template-columns: repeat(3, 88px);
+    justify-content: center;
+    margin-bottom: 10px;
+    gap: 10px;
+
+    h4 {
+        grid-column: 1/-1;
+        font-size: 12px;
+        margin: 0;
+        margin-bottom: 5px;
+        font-weight: 600;
+    }
+
+
+    img {
+        width: 88px;
+        height: 48px;
+        border-radius: 3px;
+    }
 }
