--- a/frontend-react/src/assets/cmps/_AddGroup.scss
+++ b/frontend-react/src/assets/cmps/_AddGroup.scss
@@ -1,22 +1,23 @@
 .add-group {
     border-radius: 12px;
-    padding: 6px 6px 6px 6px;
-    background-color: $group-color;
 
     .add-group-btn {
         display: flex;
-        flex-direction: column;
         min-width: 250px;
         gap: 10px;
         font-size: 14px;
-        align-items: center;
-        padding: 16px;
+        font-weight: 600;
+        align-items: flex-start;
+        padding: 12px 12px 12px 12px;
         border-radius: 12px;
+        color: white;
+        background-color: #ffffff3d;
         border: none;
         cursor: pointer;
+        transition: .3s;
 
         &:hover {
-            background-color: #4343433d;
+            background-color: #ffffff23;
         }
     }
 
