Implement cover color and photos

--- a/frontend-react/src/assets/cmps/_CardModal.scss
+++ b/frontend-react/src/assets/cmps/_CardModal.scss
@@ -26,6 +26,12 @@
     z-index: 20;
     cursor: auto;
 
+    .top-cover-img {
+      grid-column: 1/-1;
+      width: 300px;
+      justify-self: center;
+    }
+
     .task-cover {
       width: 100%;
       height: 116px;
