--- a/frontend-react/src/assets/cmps/_BoardList.scss
+++ b/frontend-react/src/assets/cmps/_BoardList.scss
@@ -110,6 +110,11 @@
           border-radius: 8px 8px 0 0;
         }
 
+        img {
+          border-radius: 8px 8px 0 0;
+          max-height: 220px;
+        }
+
         .task-main-content {
           padding: 6px 12px 6px;
 
