Fix mobile layout

--- a/frontend-react/src/assets/basics/_layout.scss
+++ b/frontend-react/src/assets/basics/_layout.scss
@@ -1,4 +1,4 @@
-@media (max-width: 1900px) {
+@media (max-width: 2200px) {
     .card-details-modal {
         display: grid;
         grid-template-columns: 50px 1fr 192px;
@@ -14,6 +14,10 @@
 
     .task-cover {
         grid-column: span 3;
+    }
+
+    .top-cover-img {
+        grid-column: 1/-1;
     }
 }
 
@@ -46,5 +50,8 @@
         grid-template-columns: 50px;
     }
 
+    .top-cover-img {
+        grid-column: span 2;
+    }
 
 }
