--- a/frontend-react/src/assets/cmps/_PopOverCheckList.scss
+++ b/frontend-react/src/assets/cmps/_PopOverCheckList.scss
@@ -1,5 +1,8 @@
 .add-checklist {
-    width: 74px;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+    Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+    font-weight: 500;
+    width: 60px;
     height: 32px;
     font-size: 14px;
     line-height: 20px;
@@ -38,6 +41,9 @@
             justify-content: space-between;
 
             .delete-checklist-btn {
+                font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+                Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+                font-weight: 500;
                 display: flex;
                 justify-items: center;
                 align-items: center;
@@ -157,29 +163,42 @@
 
         input {
             flex-grow: 1;
-            height: 56px;
+            height: 36px;
             margin-right: 5px;
             padding: 10px;
             border: none;
             box-shadow: inset 0 0 0 2px #388bff;
-
+            overflow: hidden;
+            overflow-wrap: break-word;
+            resize:none;
             &:focus-visible {
                 outline: none;
             }
         }
 
-        button {
-            padding: 5px 10px;
-            background-color: $btn-color;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-
-            &:hover {
-                background-color: $btn-hover-color;
-
-            }
+        .add-input {
+        font-weight: 500;
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
+        Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+        color: #172b4d;
+         background-color: #091e420f;
+         border: none;
+         border-radius: 3px;
+         box-sizing: border-box;
+         box-shadow: none;
+         align-items: center;
+         cursor:pointer;
+         display: inline-flex;
+         font-size: 14px;
+         justify-content: first baseline;
+         line-height: 20px;
+         padding: 6px 12px;
+         text-decoration: none;
+         transition-duration: 85ms;
+         transition-property: background-color, border-color, box-shadow;
+         transition-timing-function: ease;
+         white-space: normal;
+         width: 20%;
         }
     }
 
