--- a/frontend-react/src/assets/cmps/_App-header.scss
+++ b/frontend-react/src/assets/cmps/_App-header.scss
@@ -50,6 +50,7 @@
     }
 
     .logo {
+      position: relative;
       font-size: 24px;
       line-height: 16px;
       letter-spacing: 0.1em;
@@ -58,7 +59,6 @@
       margin-right: 20px;
       text-decoration: none;
     }
-
     .create-button {
       color: white;
       background-color: $primary-color;
@@ -196,6 +196,10 @@
       display: flex;
       align-items: center;
       height: 100%;
+      box-sizing: border-box;
+      outline :none;
+      line-height: 20px;
+    
       bottom: 0;
       width: 200px;
       max-width: none;
@@ -205,7 +209,7 @@
       border-width: 1px;
       border: 1px solid #dfe1e6;
       color: #626f86;
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.2);
 
     }
 
@@ -302,3 +306,28 @@
   width: 18px;
 }
 
+.gificon {
+  width: 100px; 
+  height: auto; 
+  display: block;
+ }
+ 
+.planit-logo {
+  position: absolute;
+  top: 50%; 
+  left: 50%; 
+  width: 50%;
+  transform: translate(-50%, -50%); 
+  color: #ffffff; 
+  font-size: 27px; 
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  right:0;
+  color: black;
+}
+
+.planit-logo a {
+  text-decoration: none; 
+  color: inherit;
+}
