--- a/frontend-react/src/assets/cmps/_App-header.scss
+++ b/frontend-react/src/assets/cmps/_App-header.scss
@@ -109,18 +109,20 @@
           opacity: 0;
           visibility: hidden;
 
+          &:hover {
+            background-color: #e0e0e0; 
+          }
           &.show {
             opacity: 1;
             visibility: visible;
           }
 
           .dropdown-item {
-            padding: 12px 16px;
             cursor: pointer;
             transition: background-color 0.2s ease-in-out;
 
             &:hover {
-              background-color: #f4f5f7;
+              background-color: #e0e0e0;
             }
           }
         }
@@ -128,6 +130,10 @@
     }
   }
 
+    .dropdown-menu:hover {
+      background-color: #e0e0e0;
+
+    }
   .right-section {
     display: flex;
     align-items: center;
@@ -208,7 +214,7 @@
       padding-left: 7px;
       border-width: 1px;
       border: 1px solid #dfe1e6;
-      color: #626f86;
+      color: #626f86;      
       background-color: rgba(255, 255, 255, 0.2);
 
     }
@@ -304,21 +310,27 @@
   font-size: 14px;
   line-height: 20px;
   width: 18px;
+  display: flex;
+  align-items: center; // Align items vertically
+  padding: 8px; // Add padding for a better look
+  gap: 10px;
 }
 
 .gificon {
   width: 100px; 
   height: auto; 
   display: block;
+  position: relative;
+  background-color: transparent;
  }
  
 .planit-logo {
+  background-color: b;
   position: absolute;
   top: 50%; 
   left: 50%; 
   width: 50%;
   transform: translate(-50%, -50%); 
-  color: #ffffff; 
   font-size: 27px; 
   font-weight: bold;
   text-align: center;
@@ -330,4 +342,31 @@
 .planit-logo a {
   text-decoration: none; 
   color: inherit;
+}
+
+.letter-p {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 4px 8px 8px;
+  margin-left: 5px;
+  text-decoration: none;
+  width: 24px;
+  height: 24px;
+  margin: 0;
+  border-radius: 4px;
+  font-size: 14px;
+  color: white;
+  font-weight: 500;
+  background: linear-gradient(#006644, #00875a88);
+}
+
+.letter-p {
+
+background-color: #e0e0e0;
+
+}
+
+.workspace-label:hover {
+  background-color: #e0e0e0;
 }
