--- a/frontend-react/src/assets/cmps/_BoardIndex.scss
+++ b/frontend-react/src/assets/cmps/_BoardIndex.scss
@@ -100,6 +100,7 @@
 
         .letter-p {
           display: flex;
+          flex-direction: row;
           justify-content: center;
           align-items: center;
           width: 24px;
