--- a/frontend-react/src/assets/cmps/_App-header.scss
+++ b/frontend-react/src/assets/cmps/_App-header.scss
@@ -141,6 +141,7 @@
     align-items: center;
     gap: 16px;
 
+
     .icon-container {
       position: relative;
       display: flex;
@@ -277,6 +278,20 @@
         background-color: #005a8d;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
       }
+    }
+
+    .logout-btn {
+      display: flex;
+      gap: 5px;
+      padding: .5rem;
+      text-align: center;
+      text-decoration: none;
+      background-color: #206f9c;
+      color: #ffffff;
+      border: 1px solid rgb(0, 0, 0);
+      border-radius: 0.3rem;
+      font-size: .8rem;
+      transition: 250ms ease-out;
     }
   }
 }
