--- a/frontend-react/src/assets/main.scss
+++ b/frontend-react/src/assets/main.scss
@@ -9,6 +9,7 @@
 
 //CMPS
 @import "./cmps/App.scss";
+@import "./cmps/MainHeader.scss";
 @import "./cmps/App-header.scss";
 @import "./cmps/Home-page.scss";
 @import "./cmps/BoardIndex";
@@ -31,7 +32,8 @@
 @import "./cmps/GroupMenuDropDown.scss";
 @import "./cmps/TaskModalPrev.scss";
 @import "./cmps/PopOverCover.scss";
-@import "./cmps/SignUp.scss";
+@import "./cmps/UserLogin.scss";
+
 
 // <<<<<<< HEAD
 @import "./cmps/TaskModal.scss";
